Correct homepage typo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camper-return",
-  "homepage": "https://hoxtygen-camper.github.io",
+  "homepage": "https://hoxtygen.github.io/camper-return",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
